<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robotic Complex</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="password">Password</string>
    <string name="image_resolution">Разрешение изображения</string>
    <string name="image_quality">Качество изображения %1$s %%</string>
    <string name="movement_speed">Speed %1$s</string>
    <string name="password_is_required">Password is required.</string>
    <string name="unavailable_flash_mode">Unavailable Flash Mode.</string>
    <string name="unsupport_flash">Device not support flash</string>
    <string name="out_of_memory">Out of memory. Please decrease image quality and preview size.</string>
    <string name="connection_down">Connection down, will be restart service in 1 seconds</string>
    <string name="default_ip_address">192.168.34.1</string>
    <string name="incompatible_firmware">Incompatible firmware version</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="ip_address">IP Address</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="photo_taken">Photo Taken.</string>
    <string name="connection_accepted">Connection accepted</string>
    <string name="quality">Quality</string>
    <string name="speed_0">Speed 0</string>
    <string name="default_quality">1280 X 720, 81 %</string>
    <string name="quality_selection">Выбор качества</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="connect">Connect</string>
</resources>