<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:id="@+id/constraint_layout"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 android:background="@color/gray">

	<requestFocus
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:text="@string/image_resolution"
		android:textColor="@color/blue"
		android:textSize="@dimen/connection_text_size"
		app:layout_constraintEnd_toStartOf="@+id/guideline3"
		app:layout_constraintTop_toTopOf="@+id/guideline"
		android:layout_marginRight="16dp"/>

	<Button
		android:id="@+id/btn_preview_size_chooser"
		android:layout_width="@dimen/camera_size_button_width"
		android:layout_height="@dimen/camera_size_button_height"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/spinner_background"
		android:textColor="@color/white"
		android:textSize="@dimen/connection_text_size"
		app:layout_constraintEnd_toEndOf="@+id/textView"
		app:layout_constraintStart_toStartOf="@+id/textView"
		app:layout_constraintTop_toBottomOf="@+id/textView"/>

	<TextView
		android:id="@+id/tv_image_quality"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:text="@string/image_quality"
		android:textColor="@color/blue"
		android:textSize="@dimen/connection_text_size"
		app:layout_constraintStart_toStartOf="@+id/guideline3"
		app:layout_constraintTop_toTopOf="@+id/guideline"
		android:layout_marginLeft="16dp"/>

	<SeekBar
		android:id="@+id/sb_image_quality"
		android:layout_width="@dimen/seekbar_width"
		android:layout_height="@dimen/seekbar_height"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:max="100"
		android:progress="30"
		android:progressDrawable="@drawable/seekbar_progress"
		android:thumb="@null"
		app:layout_constraintEnd_toEndOf="@+id/tv_image_quality"
		app:layout_constraintStart_toStartOf="@+id/tv_image_quality"
		app:layout_constraintTop_toBottomOf="@+id/tv_image_quality"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/ip_address"
		android:textColor="@color/blue"
		android:textSize="@dimen/connection_text_size"
		app:layout_constraintBottom_toBottomOf="@+id/et_ip"
		app:layout_constraintEnd_toStartOf="@+id/et_ip"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/et_ip"
		android:layout_marginRight="8dp"/>

	<EditText
		android:id="@+id/et_ip"
		android:layout_width="@dimen/edit_text_width"
		android:layout_height="@dimen/edit_text_height"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginStart="8dp"
		android:background="@drawable/edittext_bg"
		android:gravity="center_horizontal"
		android:maxLength="15"
		android:singleLine="true"
		android:textColor="@color/light_pink"
		android:textSize="@dimen/connection_text_size"
		app:layout_constraintBottom_toTopOf="@+id/btn_ok"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/textView2"
		android:layout_marginRight="16dp"
		android:layout_marginLeft="8dp"/>

	<Button
		android:id="@+id/btn_ok"
		android:layout_width="@dimen/login_button_size"
		android:layout_height="@dimen/login_button_size"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:background="@drawable/button_start"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<ImageView
		android:layout_width="@dimen/image_mode_size"
		android:layout_height="@dimen/image_mode_size"
		android:contentDescription="@null"
		android:src="@drawable/dialog_header_ioio"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.2"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5"/>

</android.support.constraint.ConstraintLayout>